--- a/ubuntu.14.04/srasearch.conf
+++ b/ubuntu.14.04/srasearch.conf
@@ -29,7 +29,7 @@ end script
 
 script
   logger -is -t "$UPSTART_JOB" "STATUS: starting up srasearch"
-  srasearch web --host="0.0.0.0" --port=80 --index-path=$INDEX_DIR
+  srasearch web --host="0.0.0.0" --port=$PORT --index-path=$INDEX_DIR
 end script
 
 pre-stop script
